--- a/lang/paquet-urls.xml
+++ b/lang/paquet-urls.xml
@@ -1,6 +1,6 @@
 <traduction module="paquet-urls" gestionnaire="salvatore" url="http://trad.spip.net" source="svn://zone.spip.org/spip-zone/_core_/plugins/urls_etendues/lang/" reference="fr">
 	<langue code="ar" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=ar">
-		<traducteur nom="&lt;span lang=&#039;fr&#039;&gt;George&lt;/span&gt;" lien="http://trad.spip.net/auteur/جورج-قندلفت" />
+		<traducteur nom="George" lien="http://trad.spip.net/auteur/جورج-قندلفت" />
 	</langue>
 	<langue code="de" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=de">
 		<traducteur nom="klaus++" lien="http://trad.spip.net/auteur/klaus" />
@@ -9,12 +9,19 @@
 		<traducteur nom="kent1" lien="http://trad.spip.net/auteur/kent1" />
 		<traducteur nom="jaro" lien="http://trad.spip.net/auteur/jaro" />
 	</langue>
+	<langue code="es" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=es">
+		<traducteur nom="dani" lien="http://trad.spip.net/auteur/dani" />
+	</langue>
 	<langue code="fa" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=fa">
 		<traducteur nom="Davood Hossein" lien="http://trad.spip.net/auteur/davood-hossein" />
 	</langue>
 	<langue code="fr" />
 	<langue code="it" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=it">
 		<traducteur nom="phante" lien="http://trad.spip.net/auteur/phante" />
+	</langue>
+	<langue code="nl" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=nl">
+		<traducteur nom="Suske" lien="http://trad.spip.net/auteur/suske" />
+		<traducteur nom="gerbrand" lien="http://trad.spip.net/auteur/gerbrand" />
 	</langue>
 	<langue code="pt_br" url="http://trad.spip.net/tradlang_module/paquet-urls?lang_cible=pt_br">
 		<traducteur nom="Ricardo Porto" lien="http://trad.spip.net/auteur/ricardo-porto" />
