--- a/lang/urls.xml
+++ b/lang/urls.xml
@@ -1,6 +1,6 @@
 <traduction module="urls" gestionnaire="salvatore" url="http://trad.spip.net" source="svn://zone.spip.org/spip-zone/_core_/plugins/urls_etendues/lang/" reference="fr">
 	<langue code="ar" url="http://trad.spip.net/tradlang_module/urls?lang_cible=ar">
-		<traducteur nom="&lt;span lang=&#039;fr&#039;&gt;George&lt;/span&gt;" lien="http://trad.spip.net/auteur/جورج-قندلفت" />
+		<traducteur nom="George" lien="http://trad.spip.net/auteur/جورج-قندلفت" />
 	</langue>
 	<langue code="de" url="http://trad.spip.net/tradlang_module/urls?lang_cible=de">
 		<traducteur nom="klaus++" lien="http://trad.spip.net/auteur/klaus" />
@@ -10,6 +10,10 @@
 		<traducteur nom="kent1" lien="http://trad.spip.net/auteur/kent1" />
 		<traducteur nom="Davood Hossein" lien="http://trad.spip.net/auteur/davood-hossein" />
 		<traducteur nom="Paolo" lien="http://trad.spip.net/auteur/paolo" />
+	</langue>
+	<langue code="es" url="http://trad.spip.net/tradlang_module/urls?lang_cible=es">
+		<traducteur nom="dani" lien="http://trad.spip.net/auteur/dani" />
+		<traducteur nom="Raquel S. Bujaldón" lien="http://trad.spip.net/auteur/raquel" />
 	</langue>
 	<langue code="fa" url="http://trad.spip.net/tradlang_module/urls?lang_cible=fa">
 		<traducteur nom="Davood Hossein" lien="http://trad.spip.net/auteur/davood-hossein" />
