--- a/lang/urls.xml
+++ b/lang/urls.xml
@@ -1,19 +1,22 @@
-<traduction module="urls" gestionnaire="salvatore" url="https://trad.spip.net" source="svn://zone.spip.org/spip-zone/_core_/plugins/urls_etendues/lang/" reference="fr">
+<traduction
+	module="urls"
+	id="urls--urls_etendues-90bad"
+	gestionnaire="salvatore"
+	url="https://trad.spip.net"
+	source="svn://zone.spip.org/spip-zone/_core_/plugins/urls_etendues/lang"
+	reference="fr">
 	<langue code="ar" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ar" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="George" lien="https://trad.spip.net/auteur/جورج-قندلفت" />
 	</langue>
-	<langue code="ast" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ast" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
+	<langue code="ast" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ast" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
 	<langue code="br" url="https://trad.spip.net/tradlang_module/urls?lang_cible=br" total="45" traduits="34" relire="0" modifs="0" nouveaux="11" pourcent="75.56">
 		<traducteur nom="nonobreizh" lien="https://trad.spip.net/auteur/nonobreizh" />
 	</langue>
 	<langue code="ca" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ca" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
 		<traducteur nom="merce" lien="https://trad.spip.net/auteur/merce" />
 	</langue>
-	<langue code="co" url="https://trad.spip.net/tradlang_module/urls?lang_cible=co" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
-	<langue code="cs" url="https://trad.spip.net/tradlang_module/urls?lang_cible=cs" total="45" traduits="1" relire="0" modifs="0" nouveaux="44" pourcent="2.22">
-	</langue>
+	<langue code="co" url="https://trad.spip.net/tradlang_module/urls?lang_cible=co" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
+	<langue code="cs" url="https://trad.spip.net/tradlang_module/urls?lang_cible=cs" total="45" traduits="1" relire="0" modifs="0" nouveaux="44" pourcent="2.22" />
 	<langue code="de" url="https://trad.spip.net/tradlang_module/urls?lang_cible=de" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="kennethkeen" lien="https://trad.spip.net/auteur/kennethkeen" />
 		<traducteur nom="klaus++" lien="https://trad.spip.net/auteur/klaus" />
@@ -38,8 +41,7 @@
 	<langue code="fa" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fa" total="45" traduits="44" relire="0" modifs="0" nouveaux="1" pourcent="97.78">
 		<traducteur nom="Davood Hossein" lien="https://trad.spip.net/auteur/davood-hossein" />
 	</langue>
-	<langue code="fr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
-	</langue>
+	<langue code="fr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00" />
 	<langue code="fr_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr_fem" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="b_b" lien="https://trad.spip.net/auteur/b_b" />
 		<traducteur nom="denisb" lien="https://trad.spip.net/auteur/denisb" />
@@ -47,19 +49,16 @@
 	<langue code="fr_tu" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr_tu" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="RealET" lien="https://trad.spip.net/auteur/realet" />
 	</langue>
-	<langue code="gl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=gl" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
+	<langue code="gl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=gl" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
 	<langue code="it" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Julia14" lien="https://trad.spip.net/auteur/julia14" />
 		<traducteur nom="phante" lien="https://trad.spip.net/auteur/phante" />
 	</langue>
-	<langue code="it_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it_fem" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
+	<langue code="it_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it_fem" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
 	<langue code="ja" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ja" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="origenius" lien="https://trad.spip.net/auteur/origenius" />
 	</langue>
-	<langue code="lb" url="https://trad.spip.net/tradlang_module/urls?lang_cible=lb" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
+	<langue code="lb" url="https://trad.spip.net/tradlang_module/urls?lang_cible=lb" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
 	<langue code="nl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=nl" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Hanjo" lien="https://trad.spip.net/auteur/hanjo" />
 	</langue>
@@ -73,8 +72,7 @@
 		<traducteur nom="Ricardo Porto" lien="https://trad.spip.net/auteur/ricardo-porto" />
 		<traducteur nom="telopa" lien="https://trad.spip.net/auteur/telopa" />
 	</langue>
-	<langue code="ro" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ro" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
+	<langue code="ro" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ro" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
 	<langue code="ru" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ru" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="olly" lien="https://trad.spip.net/auteur/olly" />
 		<traducteur nom="Serge Markitanenko" lien="https://trad.spip.net/auteur/serge-markitanenko" />
@@ -82,8 +80,7 @@
 	<langue code="sk" url="https://trad.spip.net/tradlang_module/urls?lang_cible=sk" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="jaro" lien="https://trad.spip.net/auteur/jaro" />
 	</langue>
-	<langue code="tr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=tr" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
-	</langue>
+	<langue code="tr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=tr" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
 	<langue code="uk" url="https://trad.spip.net/tradlang_module/urls?lang_cible=uk" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="olly" lien="https://trad.spip.net/auteur/olly" />
 	</langue>
