--- a/lang/paquet-urls.xml
+++ b/lang/paquet-urls.xml
@@ -1,9 +1,9 @@
 <traduction
 	module="paquet-urls"
-	id="paquet-urls--urls_etendues-90bad"
+	id="paquet-urls--urls_etendues-d801a"
 	gestionnaire="salvatore"
 	url="https://trad.spip.net"
-	source="svn://zone.spip.org/spip-zone/_core_/plugins/urls_etendues/lang"
+	source="https://git.spip.net/spip/urls_etendues.git"
 	reference="fr">
 	<langue code="ar" url="https://trad.spip.net/tradlang_module/paquet-urls?lang_cible=ar" total="2" traduits="2" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="George" lien="https://trad.spip.net/auteur/جورج-قندلفت" />
