--- a/lang/urls.xml
+++ b/lang/urls.xml
@@ -5,24 +5,24 @@
 	url="https://trad.spip.net"
 	source="https://git.spip.net/spip/urls_etendues.git"
 	reference="fr">
-	<langue code="ar" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ar" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="ar" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ar" total="46" traduits="46" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="George" lien="https://trad.spip.net/auteur/جورج-قندلفت" />
 	</langue>
-	<langue code="ast" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ast" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="br" url="https://trad.spip.net/tradlang_module/urls?lang_cible=br" total="45" traduits="34" relire="0" modifs="0" nouveaux="11" pourcent="75.56">
+	<langue code="ast" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ast" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="br" url="https://trad.spip.net/tradlang_module/urls?lang_cible=br" total="46" traduits="34" relire="0" modifs="0" nouveaux="12" pourcent="73.91">
 		<traducteur nom="nonobreizh" lien="https://trad.spip.net/auteur/nonobreizh" />
 	</langue>
-	<langue code="ca" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ca" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67">
+	<langue code="ca" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ca" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52">
 		<traducteur nom="merce" lien="https://trad.spip.net/auteur/merce" />
 	</langue>
-	<langue code="co" url="https://trad.spip.net/tradlang_module/urls?lang_cible=co" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="cs" url="https://trad.spip.net/tradlang_module/urls?lang_cible=cs" total="45" traduits="1" relire="0" modifs="0" nouveaux="44" pourcent="2.22" />
-	<langue code="de" url="https://trad.spip.net/tradlang_module/urls?lang_cible=de" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="co" url="https://trad.spip.net/tradlang_module/urls?lang_cible=co" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="cs" url="https://trad.spip.net/tradlang_module/urls?lang_cible=cs" total="46" traduits="1" relire="0" modifs="0" nouveaux="45" pourcent="2.17" />
+	<langue code="de" url="https://trad.spip.net/tradlang_module/urls?lang_cible=de" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="kennethkeen" lien="https://trad.spip.net/auteur/kennethkeen" />
 		<traducteur nom="klaus++" lien="https://trad.spip.net/auteur/klaus" />
 		<traducteur nom="Torsten Willmann" lien="https://trad.spip.net/auteur/torsten-willmann" />
 	</langue>
-	<langue code="en" url="https://trad.spip.net/tradlang_module/urls?lang_cible=en" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="en" url="https://trad.spip.net/tradlang_module/urls?lang_cible=en" total="46" traduits="46" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="b_b" lien="https://trad.spip.net/auteur/b_b" />
 		<traducteur nom="Davood Hossein" lien="https://trad.spip.net/auteur/davood-hossein" />
 		<traducteur nom="George" lien="https://trad.spip.net/auteur/جورج-قندلفت" />
@@ -30,58 +30,59 @@
 		<traducteur nom="Paolo" lien="https://trad.spip.net/auteur/paolo" />
 		<traducteur nom="sQuonk" lien="https://trad.spip.net/auteur/squonk" />
 	</langue>
-	<langue code="eo" url="https://trad.spip.net/tradlang_module/urls?lang_cible=eo" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="eo" url="https://trad.spip.net/tradlang_module/urls?lang_cible=eo" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="gpl" lien="https://trad.spip.net/auteur/gpl" />
 	</langue>
-	<langue code="es" url="https://trad.spip.net/tradlang_module/urls?lang_cible=es" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="es" url="https://trad.spip.net/tradlang_module/urls?lang_cible=es" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="b_b" lien="https://trad.spip.net/auteur/b_b" />
 		<traducteur nom="dani" lien="https://trad.spip.net/auteur/dani" />
 		<traducteur nom="Raquel S. Bujaldón" lien="https://trad.spip.net/auteur/raquel-s-bujaldon" />
 	</langue>
-	<langue code="fa" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fa" total="45" traduits="44" relire="0" modifs="0" nouveaux="1" pourcent="97.78">
+	<langue code="fa" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fa" total="46" traduits="44" relire="0" modifs="0" nouveaux="2" pourcent="95.65">
 		<traducteur nom="Davood Hossein" lien="https://trad.spip.net/auteur/davood-hossein" />
 	</langue>
-	<langue code="fr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00" />
-	<langue code="fr_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr_fem" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="fr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr" total="46" traduits="46" relire="0" modifs="0" nouveaux="0" pourcent="100.00" />
+	<langue code="fr_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr_fem" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="b_b" lien="https://trad.spip.net/auteur/b_b" />
 		<traducteur nom="denisb" lien="https://trad.spip.net/auteur/denisb" />
 	</langue>
-	<langue code="fr_tu" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr_tu" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="fr_tu" url="https://trad.spip.net/tradlang_module/urls?lang_cible=fr_tu" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="RealET" lien="https://trad.spip.net/auteur/realet" />
 	</langue>
-	<langue code="gl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=gl" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="it" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="gl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=gl" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="it" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it" total="46" traduits="46" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="Alberto" lien="https://trad.spip.net/auteur/alberto" />
 		<traducteur nom="Julia14" lien="https://trad.spip.net/auteur/julia14" />
 		<traducteur nom="phante" lien="https://trad.spip.net/auteur/phante" />
 	</langue>
-	<langue code="it_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it_fem" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="ja" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ja" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="it_fem" url="https://trad.spip.net/tradlang_module/urls?lang_cible=it_fem" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="ja" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ja" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="origenius" lien="https://trad.spip.net/auteur/origenius" />
 	</langue>
-	<langue code="lb" url="https://trad.spip.net/tradlang_module/urls?lang_cible=lb" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="nl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=nl" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="lb" url="https://trad.spip.net/tradlang_module/urls?lang_cible=lb" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="nl" url="https://trad.spip.net/tradlang_module/urls?lang_cible=nl" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="Hanjo" lien="https://trad.spip.net/auteur/hanjo" />
 	</langue>
-	<langue code="oc_ni_mis" url="https://trad.spip.net/tradlang_module/urls?lang_cible=oc_ni_mis" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="oc_ni_mis" url="https://trad.spip.net/tradlang_module/urls?lang_cible=oc_ni_mis" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="sylvain" lien="https://trad.spip.net/auteur/sylvain" />
 	</langue>
-	<langue code="pt" url="https://trad.spip.net/tradlang_module/urls?lang_cible=pt" total="45" traduits="44" relire="0" modifs="1" nouveaux="0" pourcent="97.78">
+	<langue code="pt" url="https://trad.spip.net/tradlang_module/urls?lang_cible=pt" total="46" traduits="44" relire="0" modifs="1" nouveaux="1" pourcent="95.65">
 		<traducteur nom="Cláudia Anjos Lopes" lien="https://trad.spip.net/auteur/claudia_a_lopes" />
 	</langue>
-	<langue code="pt_br" url="https://trad.spip.net/tradlang_module/urls?lang_cible=pt_br" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="pt_br" url="https://trad.spip.net/tradlang_module/urls?lang_cible=pt_br" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="Ricardo Porto" lien="https://trad.spip.net/auteur/ricardo-porto" />
 		<traducteur nom="telopa" lien="https://trad.spip.net/auteur/telopa" />
 	</langue>
-	<langue code="ro" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ro" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="ru" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ru" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="ro" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ro" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="ru" url="https://trad.spip.net/tradlang_module/urls?lang_cible=ru" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="olly" lien="https://trad.spip.net/auteur/olly" />
 		<traducteur nom="Serge Markitanenko" lien="https://trad.spip.net/auteur/serge-markitanenko" />
 	</langue>
-	<langue code="sk" url="https://trad.spip.net/tradlang_module/urls?lang_cible=sk" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="sk" url="https://trad.spip.net/tradlang_module/urls?lang_cible=sk" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="jaro" lien="https://trad.spip.net/auteur/jaro" />
 	</langue>
-	<langue code="tr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=tr" total="45" traduits="3" relire="0" modifs="0" nouveaux="42" pourcent="6.67" />
-	<langue code="uk" url="https://trad.spip.net/tradlang_module/urls?lang_cible=uk" total="45" traduits="45" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	<langue code="tr" url="https://trad.spip.net/tradlang_module/urls?lang_cible=tr" total="46" traduits="3" relire="0" modifs="0" nouveaux="43" pourcent="6.52" />
+	<langue code="uk" url="https://trad.spip.net/tradlang_module/urls?lang_cible=uk" total="46" traduits="45" relire="0" modifs="0" nouveaux="1" pourcent="97.83">
 		<traducteur nom="olly" lien="https://trad.spip.net/auteur/olly" />
 	</langue>
 </traduction>
